new endpoints - campus e curso
